[gd_scene load_steps=3 format=2]

[ext_resource path="res://ceu estrelado.png" type="Texture" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]

[node name="CeuEstrelado" type="Sprite" parent="."]
position = Vector2( 128, 96 )
texture = ExtResource( 1 )

[node name="Button1" type="Button" parent="CeuEstrelado"]
margin_left = -112.0
margin_top = 32.0
margin_right = 164.0
margin_bottom = 52.0
text = "minha justificativa relacionada ao tema "

[node name="Button" type="Button" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 142.0
margin_bottom = 100.0
text = "INICIAR"
script = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_right = 208.0
margin_bottom = 80.0
meta_underlined = false
text = "  Bem vindo ao meu jogo!
  
 por: Freddy Mester Harari
     
	clique aqui para iniciar
			         

"

[connection signal="pressed" from="CeuEstrelado/Button1" to="Button" method="_on_Button1_pressed"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
