[gd_scene load_steps=4 format=2]

[ext_resource path="res://ceu estrelado.png" type="Texture" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]
[ext_resource path="res://Button8.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]

[node name="CeuEstrelado" type="Sprite" parent="."]
position = Vector2( 64, 112 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="CeuEstrelado"]
margin_top = -96.0
margin_right = 240.0
margin_bottom = 40.0
text = "      
	
	
	     ERRRRROOOOUUUU"

[node name="Button" type="Button" parent="CeuEstrelado"]
margin_left = 144.0
margin_top = -96.0
margin_right = 245.0
margin_bottom = -76.0
text = "tente de novo"
script = ExtResource( 2 )

[node name="Button8" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 36.0
text = "voltar tela inicial"
script = ExtResource( 3 )

[connection signal="pressed" from="CeuEstrelado/Button" to="CeuEstrelado/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Button8" to="CeuEstrelado/Button" method="_on_Button8_pressed"]
