[gd_scene load_steps=4 format=2]

[ext_resource path="res://ceu estrelado.png" type="Texture" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]
[ext_resource path="res://Button6.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]

[node name="CeuEstrelado" type="Sprite" parent="."]
position = Vector2( 80, 192 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="CeuEstrelado"]
margin_left = -32.0
margin_top = -176.0
margin_right = 176.0
margin_bottom = -40.0
text = "     
	
	
	        
			ERRROOOUUU"

[node name="Button" type="Button" parent="CeuEstrelado"]
margin_left = 128.0
margin_top = -176.0
margin_right = 208.0
margin_bottom = -156.0
text = "tente de novo"
script = ExtResource( 2 )

[node name="Button6" type="Button" parent="CeuEstrelado"]
margin_left = -64.0
margin_top = -176.0
margin_right = 54.0
margin_bottom = -156.0
text = "voltar tela inicial"
script = ExtResource( 3 )

[connection signal="pressed" from="CeuEstrelado/Button" to="CeuEstrelado/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="CeuEstrelado/Button6" to="CeuEstrelado/Button" method="_on_Button6_pressed"]
