[gd_scene load_steps=4 format=2]

[ext_resource path="res://ceu estrelado.png" type="Texture" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]
[ext_resource path="res://Button7.gd" type="Script" id=3]

[node name="CeuEstrelado" type="Sprite"]
position = Vector2( 64, 128 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = -112.0
margin_right = 192.0
margin_bottom = 40.0
text = "



     ERRRRRRROOOOUUUU"

[node name="Button" type="Button" parent="."]
margin_left = 144.0
margin_top = -112.0
margin_right = 245.0
margin_bottom = -92.0
text = "tente de novo"
script = ExtResource( 2 )

[node name="Button7" type="Button" parent="."]
margin_left = -48.0
margin_top = -112.0
margin_right = 16.0
margin_bottom = -92.0
text = "voltar tela inicial"
script = ExtResource( 3 )

[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Button7" to="Button" method="_on_Button7_pressed"]
