extends Button


func _ready():
	pass


func _on_Button_pressed():
	get_tree().change_scene("res://LEVEL01.tscn") 
	
	


func _on_Button1_pressed():
	get_tree().change_scene("res://justificativa do game.tscn")



func _on_Button2_pressed():
	get_tree().change_scene("res://Tela Inicial.tscn")


func _on_Button6_pressed():
	get_tree().change_scene("res://Tela Inicial.tscn")


func _on_Button7_pressed():
	get_tree().change_scene("res://Tela Inicial.tscn")


func _on_Button8_pressed():
	get_tree().change_scene("res://Tela Inicial.tscn")
